# ChangeLog for catalyst
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  19 Dec 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/__init__.py:
  Use a regex to parse the built target filenames

  29 Nov 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py:
  Split up huge __init__() into startup and run-time init functions

  28 Nov 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/__init__.py:
  Add initial target buildplan logic

  28 Nov 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic.py:
  Add initialization of values for catalyst.target.target in
  generic_target's __init__()

  28 Nov 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/__init__.py:
  Split up built_target into target and built_target

  28 Nov 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/__init__.py:
  Add initial built_target support

  28 Nov 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/util.py:
  change os.path.is_dir() to isdir()

  20 Sep 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  files/catalyst.conf, modules/catalyst/target/generic_stage.py:
  Remove metadata_overlay option, since it doesn't make sense with
  >=portage-2.1.6

  19 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/embedded.py, modules/catalyst/target/generic.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/snapshot.py,
  modules/catalyst/target/stage1.py, modules/catalyst/target/stage2.py,
  modules/catalyst/target/stage3.py, modules/catalyst/target/stage4.py,
  modules/catalyst/target/system.py, modules/catalyst/target/tinderbox.py:
  Add dependency information for each target